testsuite/tests/grammar/invalid_synthetic_parser/common.lkt
import lexer_example

@abstract class FooNode implements Node[FooNode] {
}

class Example : FooNode {
    @parse_field f: FooNode
}

@synthetic
class SynthExample : FooNode {
}

@synthetic
class ListSynthExample : ASTList[FooNode, FooNode] {
}
